--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lib": "lib"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "jest": "^26.1.0"
   },
   "repository": {
     "type": "git",
