--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "lodash": "^4.17.19",
     "nodemailer": "6.3.1",
     "nodemon": "^2.0.4",
     "stripe": "^8.47.0"
